2014-03-23  Christian Svensson  <blue@cmd.nu>

	* config.guess (openrisc:Linux:*:*): New.
	* config.guess (or1k*:Linux:*:*): Modified for or1knd.
	* config.sub (or1knd): New.
	* testsuite/config-guess.data: Test for or1knd:Linux, openrisc:Linux.
	* testsuite/config-sub.data: Tests for or1knd-linux, or1knd-elf,
	or1knd and or1k.

2014-03-13  Ben Elliston  <bje@gnu.org>

	Reported by Dejan Lekic <dejan.lekic@gmail.com>.
	* config.guess (*:MSYS*:*): Match all machines, not just i*.
	* testsuite/config-guess.data: Add a test case.

2014-02-12  Urs Janssen  <urs@akk.org>

	* config.guess (Linux|GNU|GNU/*): Strip extraneous whitespace
	inserted by the preprocessor (eg, pgcc -E).

2014-01-25  Ben Elliston  <bje@gnu.org>

	* config.guess: Remove check for /usr/apollo directory.

2014-01-25  Ben Elliston  <bje@gnu.org>

	* config.guess: Remove the C program that detects ancient
	operating systems without using uname(1).

2014-01-25  Ben Elliston  <bje@gnu.org>

	* config.guess (arm-acorn-riscix, m68k-hp-bsd, i860-alliant-bsd)
	(i386-pc-bsd, i386-sequent-ptx, i386-sequent-dynix)
	(n32k-sequent-dynix, m68k-sony-newsos, mips-sony-bsd)
	(ns32k-encore-sysv, ns32k-encore-mach, ns32k-encore-bsd)
	(<arch>-next-nextstep, <arch>-next-openstep, vax-dec-bsd4.3)
	(vax-dec-bsd4.3reno, vax-dec-bsd, vax-dec-ultrix): Remove from the
	C program.

2014-01-25  Ben Elliston  <bje@gnu.org>

	* config.guess (c1-convex-bsd, c32-convex-bsd, c2-convex-bsd)
	(c34-convex-bsd, c38-convex-bsd, c4-convex-bsd): Remove Convex
	triplets that are not handled inside the case statement.

2014-01-01  Ben Elliston  <bje@gnu.org>

	* testsuite/config.guess: Sort.
	* testsuite/config.sub: Ditto.

2014-01-01  Ben Elliston  <bje@gnu.org>

	* config.guess: Update copyright years.
	* config.sub: Likewise.

2013-11-28  Adam Maxwell <amaxwell@mac.com>

	* config.guess (*:Darwin:*:*): Avoid executing `cc' on OS X 10.9,
	as it ships with a stub that puts up a graphical alert prompting
	the user to install developer tools.